--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -17,9 +17,7 @@ jobs:
         with:
           python-version: "3.12"
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y xdelta3 squashfs-tools
+        run: sudo apt-get update && sudo apt-get install -y xdelta3
       - run: pip install -r requirements.txt
       - run: python process.py
       - name: Get release date
